# freenetconfd-plugin-dt-fw

./: CMakeLists.txt
src/: firmware_upgrade.c  firmware_upgrade.h  ietf-system.c
yang/: opencpe-firmware-mgmt@2014-02-06.yang
